commented and refactored

--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="container">
-    <div class="header" style="margin-top: 20px">
+    <div class="header" style="margin-top: 10px">
       <h4 class="title">How much of your life have you shared?</h4>
     </div>
     <div class="row">
-      <form>
+      <form style="margin: 0">
         <div class="row">
           <div class="four columns">
             <label for="birthday">Your birthday</label>
@@ -66,6 +66,10 @@
     <div class="row">
       <svg width="100%" height="500" id="mount" style="overflow: visible"></svg>
     </div>
+    <div class="header" style="margin-top: 10px">
+      <h5 class="title">Key Data</h5>
+    </div>
+
     <div class="row" id="mountTable" style="padding: 0 10px; background-color: #FFE6EE">
     </div>
   </div>
