Themed colors, fixed styles

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <h5 class="title">Key Data</h5>
     </div>
 
-    <div class="row" id="mountTable" style="padding: 0 10px; background-color: #FFE6EE">
+    <div class="row" id="mountTable">
     </div>
   </div>
 
