--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
       </form>
     </div>
     <div class="row">
-      <svg width="100%" height="500" id="mount" style="overflow: visible"></svg>
+      <svg width="100%" height="485" id="mount" style="overflow: visible"></svg>
     </div>
     <div class="header" style="margin-top: 10px">
-      <h5 class="title">Key Data</h5>
+      <h5 class="title">Key Dates</h5>
     </div>
 
     <div class="row" id="mountTable">
